cluster1/order-api/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mongodb-network-policy
  namespace: order-system

spec:
  podSelector:
    matchLabels:
      app: mongodb

  policyTypes:
  - Ingress

  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: order-api

    ports:
    - protocol: TCP
      port: 27017
